# momazos-brun-t

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml
static/: index.js  style.css
templates/: index.html
