[project]
name = "modulo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "livereload>=2.7.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Ensure proper package discovery
[tool.setuptools.packages.find]
include = ["modulo2"]
exclude = ["static", "templates"]

